# snailgas

./: snailgas.cabal  stack.yaml
app/: Main.hs
data/: basic.frag  basic.vert
data/shaders/: sprite.frag  sprite.vert
src/: Graphics.hs  Snailgas.hs
src/Snailgas/: Graphics.hs
src/Snailgas/Graphics/: GL.hs
