name:                snailgas
version:             0.1.0.0
homepage:            https://github.com/Catchouli/snailgas#readme
license:             BSD3
license-file:        LICENSE
author:              Caitlin Wilks
maintainer:          mitasuki@gmail.com.com
copyright:           2017 Caitlin Wilks
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Snailgas
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , reactive-banana
                     , sdl2
                     , linear
                     , OpenGLRaw
                     , text
                     , JuicyPixels
                     , vector
                     , containers
                     , directory
                     , filepath

executable snailgas-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , snailgas
                     , reactive-banana

source-repository head
  type:     git
  location: https://github.com/Catchouli/snailgas
